# setforge

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOpenSceneGraph.cmake
data/: Bunny_front_scene_04_current_pose.txt  stanford_bunny_02_current_pose.txt  stanford_bunny_02_rot.mtl
data/example_files/: brdf_material.json  camera_params.json  hsv_random_material.json
doc/: GoogleDocs_links.html
gl_common_ext/: BMPLoader.cpp  BMPLoader.h  BRDFLoader.cpp  BRDFLoader.h  CameraControls.cpp  CameraControls.h  CommonTypes.h  GLGeometryUtils.cpp  GLGeometryUtils.h  ModelBBox.cpp  ModelBBox.h  ModelBRDF.cpp  ModelBRDF.h  ModelCoordinateSystem.cpp  ModelOBJ.cpp  ModelOBJ.h  OBJLoader.h  ShaderProgram.cpp  ShaderProgram.h  TrackballControls.cpp  TrackballControls.h  Window.cpp  Window.h
python_src/: Cam2Pickle.py  DatasetReader.py  Image2Pickle.py  RGBNM2Pickle.py  RGB_DNM2Pickle.py
src/: ArgParser.cpp  ArgParser.h  BPTReaderWriter.cpp  BPTReaderWriter.h  BPTTypes.h  BalancedPoseTree.cpp  BalancedPoseTree.h  CMakeLists.txt  CameraParameters.cpp  CameraParameters.h  ControlPointsHelper.cpp  ControlPointsHelper.h  FileUtils.cpp  FileUtils.h  GLSLShaderSrc.h  GeometryUtils.cpp  GeometryUtils.h  HistogramFilter.h  ImageFilter.cpp  ImageFilter.h  ImageLogReader.cpp  ImageLogReader.h  ImageMask.cpp  ImageMask.h  ImageWriter.cpp  ImageWriter.h  MaterialRandomization.cpp  MaterialRandomization.h  MaterialReaderWriter.cpp  MaterialReaderWriter.h  MaterialTypes.h  MatrixFileUtils.cpp  MatrixFileUtils.h  MatrixHelpers.h  Model3D.cpp  Model3D.h  ModelRenderer.cpp  ModelRenderer.h  NoiseFilter.cpp  NoiseFilter.h  (+27 more)
src/PoseEvalRenderer/: CMakeLists.txt  LogFileReader.cpp  LogFileReader.h  Model3DExt.cpp  Model3DExt.h  PoseEval3DMain.cpp  PoseEval3DMain.h  main.cpp  types.h
test_src/: CMakeLists.txt  Polyhedron.cpp  Polyhedron.h  test_main.cpp
